--- a/TechVJ/template/req.html
+++ b/TechVJ/template/req.html
@@ -75,28 +75,12 @@
                         <h2 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Explore</h2>
                     </div>
                     <div class=" d-block px-5 wow animate__animated animate__fadeInRight ">
-                        <a href="https://telegram.me/kingvj01" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Owner</a>
-                        <a href="https://telegram.me/vj_botz" type="button" class="btn btn-outline-secondary w-100 mt-1">Telegram</a>
-                        <a href="https://instagram.com/tech.vj/" type="button" class="btn btn-outline-secondary w-100 mt-1">Instagram</a>
-                        <a href="https://youtube.com/@Tech_VJ" type="button" class="btn btn-outline-secondary w-100 mt-1">YouTube</a>
-			<a href="https://github.com/VJBots" type="button" class="btn btn-outline-secondary w-100 mt-1">GitHub</a>
-                    </div>
-                    
-                <!-- section -->
-                <div class="m-2 mt-4">
-                    <p>
-                        <a class="btn btn-primary w-100 flex justify-center items-center gap-2" data-bs-toggle="collapse" href="" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-paper-heart" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v1.133l.941.502A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765L2 3.133V2Zm0 2.267-.47.25A1 1 0 0 0 1 5.4v.817l1 .6v-2.55Zm1 3.15 3.75 2.25L8 8.917l1.25.75L13 7.417V2a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v5.417Zm11-.6 1-.6V5.4a1 1 0 0 0-.53-.882L14 4.267v2.55ZM8 2.982C9.664 1.309 13.825 4.236 8 8 2.175 4.236 6.336 1.31 8 2.982Zm7 4.401-4.778 2.867L15 13.117V7.383Zm-.035 6.88L8 10.082l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738ZM1 13.116l4.778-2.867L1 7.383v5.734Z"/>
-                              </svg>
-                            <span class="ps-2">Watch Deploy Tutorial</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-activity" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2Z"/>
-                              </svg>
-                        </a>
-                    </p>
-                </div>
-                  
+                        <a href="https://telegram.me/sl_sung" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Owner</a>
+                        <a href="https://telegram.me/sl_necromancer" type="button" class="btn btn-outline-secondary w-100 mt-1">Telegram</a>
+                        <a href="https://t.me/solo_leveling_botz" type="button" class="btn btn-outline-secondary w-100 mt-1">Instagram</a>
+                        <a href="https://t.me/solo_leveling_botz" type="button" class="btn btn-outline-secondary w-100 mt-1">YouTube</a>
+			<a href="https://t.me/solo_leveling_botz" type="button" class="btn btn-outline-secondary w-100 mt-1">GitHub</a>
+		    </div>     
                     <!-- footer of sidebar -->
                     
                     <div class="text-center w-100">
@@ -206,7 +190,7 @@
             <div class="justify-content-center align-items-center w-100 d-flex mb-3">
                 <div class="row d-flex w-100 justify-content-center align-items-center">
                     <div class="col-lg-5 col-10  py-2 text-center bg-success rounded-4 text-sm wow animate__animated animate__FadeIn">
-                        If You Find Any Broken Links Then Please Contact <a href="https://telegram.me/kingvj01" class="text-[16px] font-bold underline active:text-blue-600">ꜱᴏʟᴏ ʟᴇᴠᴇʟɪɴɢ</a>
+                        If You Find Any Broken Links Then Please Contact <a href="https://telegram.me/sl_necromancer" class="text-[16px] font-bold underline active:text-blue-600">ꜱᴏʟᴏ ʟᴇᴠᴇʟɪɴɢ</a>
                     </div>
                 </div>
             </div>
@@ -225,7 +209,7 @@
                     </a>
               
                     <!-- Telegram -->
-                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200" href="https://telegram.me/VJ_Botz" target="_blank" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200" href="https://t.me/solo_leveling_botz" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 50 50">
                         <path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M25,2c12.703,0,23,10.297,23,23S37.703,48,25,48S2,37.703,2,25S12.297,2,25,2z M32.934,34.375	c0.423-1.298,2.405-14.234,2.65-16.783c0.074-0.772-0.17-1.285-0.648-1.514c-0.578-0.278-1.434-0.139-2.427,0.219	c-1.362,0.491-18.774,7.884-19.78,8.312c-0.954,0.405-1.856,0.847-1.856,1.487c0,0.45,0.267,0.703,1.003,0.966	c0.766,0.273,2.695,0.858,3.834,1.172c1.097,0.303,2.346,0.04,3.046-0.395c0.742-0.461,9.305-6.191,9.92-6.693	c0.614-0.502,1.104,0.141,0.602,0.644c-0.502,0.502-6.38,6.207-7.155,6.997c-0.941,0.959-0.273,1.953,0.358,2.351	c0.721,0.454,5.906,3.932,6.687,4.49c0.781,0.558,1.573,0.811,2.298,0.811C32.191,36.439,32.573,35.484,32.934,34.375z"></path>
                     </svg>
@@ -239,7 +223,7 @@
                     </a>
               
                     <!-- ADMIN -->
-                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://telegram.me/kingvj01" target="_blank" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300" href="https://telegram.me/sl_necromancer" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
                         <path fill="url(#PMWUiMSnUf2R_PPJ6rqZea_44112_gr1)" d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z"></path>
                     </svg>
@@ -271,7 +255,7 @@
                                 <img src="https://ibb.co/XWF8wHp" height="140px" class="rounded-3 " alt="logo">
                         </li>
                         <!-- <li class="nav-item justify-center items-center text-center">
-                            <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/VJ_Bots" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/KingVj01" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/KingVj01" target="_blank">Indu(<a href="https://telegram.me/KingVj01" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">ꜱᴏʟᴏ ʟᴇᴠᴇʟɪɴɢ</a>)</a> </h5></a>
+                            <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/VJ_Bots" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/sl_necromancer" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/sl_necromancer" target="_blank">Indu(<a href="https://telegram.me/sl_necromancer" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">ꜱᴏʟᴏ ʟᴇᴠᴇʟɪɴɢ</a>)</a> </h5></a>
                         </li> -->
                     </ul>
                 </div>
@@ -293,7 +277,7 @@
                 var theDate=new Date() 
                     document.write(theDate.getFullYear()) 
             </script> Copyright :
-                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/vj_botz">ꜱᴏʟᴏ ʟᴇᴠᴇʟɪɴɢ</a>
+                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://t.me/solo_leveling_botz">ꜱᴏʟᴏ ʟᴇᴠᴇʟɪɴɢ</a>
                 
                 All Right Reserved
             </div>   
